fix two container with overflow

--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -1,4 +1,5 @@
 .layout__container {
   height: 100vh; /* Fallback for browsers that do not support Custom Properties */
   height: calc(var(--vh, 1vh) * 100);
+  overflow-x: hidden;
 }
